--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "lint": "next lint && npx prettier --check \"{__tests__,components,pages,styles}/**/*.{ts,tsx,js,jsx}\" && npx tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@mui/material": "^5.16.7",
     "@privy-io/react-auth": "1.80.0",
     "@privy-io/server-auth": "1.11.0",
     "@tailwindcss/forms": "^0.5.3",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "viem": "^2.20.0"
   },
   "devDependencies": {
     "@tsconfig/next": "^2.0.0",
