--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@privy-io/react-auth": "1.80.0",
     "@privy-io/server-auth": "1.11.0",
     "@tailwindcss/forms": "^0.5.3",
+    "formik": "^2.4.6",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "viem": "^2.20.0"
+    "viem": "^2.20.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tsconfig/next": "^2.0.0",
