--- a/SoulBoundNFT/package.json
+++ b/SoulBoundNFT/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@charged-particles/protocol-subgraph": "^1.3.20",
+    "@mui/icons-material": "^5.16.7",
     "@nomicfoundation/hardhat-verify": "^2.0.9",
     "@openzeppelin/contracts": "^4.7.2",
     "dotenv": "^16.0.1"
