--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^5.0.14",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@privy-io/react-auth": "1.80.0",
     "@privy-io/server-auth": "1.11.0",
