--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "viem": "^2.20.0",
+    "wagmi": "^2.12.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
