--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
     "@headlessui/react": "^1.7.3",
+    "@helia/unixfs": "^3.0.7",
     "@heroicons/react": "^2.0.12",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@privy-io/react-auth": "1.80.0",
     "@privy-io/server-auth": "1.11.0",
     "@tailwindcss/forms": "^0.5.3",
+    "blockstore-core": "^5.0.0",
+    "formidable": "^3.5.1",
     "formik": "^2.4.6",
+    "helia": "^4.2.5",
+    "ipfs-http-client": "^49.0.4",
+    "kubo-rpc-client": "^4.1.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remove": "^0.1.5",
     "viem": "^2.20.0",
     "wagmi": "^2.12.7",
     "yup": "^1.4.0"
