--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "format": "npx prettier --write \"{__tests__,components,pages,styles}/**/*.{ts,tsx,js,jsx}\"",
-    "lint": "next lint && npx prettier --check \"{__tests__,components,pages,styles}/**/*.{ts,tsx,js,jsx}\" && npx tsc --noEmit"
+    "lint": "next lint && npx prettier --check \"{__tests__,components,pages,styles}/**/*.{ts,tsx,js,jsx}\" && npx tsc --noEmit",
+    "test": "ts-jest"
   },
   "dependencies": {
     "@docuseal/react": "^1.0.43",
@@ -20,11 +21,17 @@
     "@headlessui/react": "^1.7.3",
     "@helia/unixfs": "^3.0.7",
     "@heroicons/react": "^2.0.12",
+    "@lit-protocol/auth-helpers": "^6.4.10",
+    "@lit-protocol/constants": "^6.4.10",
+    "@lit-protocol/contracts-sdk": "^6.4.10",
+    "@lit-protocol/lit-node-client": "^6.4.10",
+    "@lit-protocol/types": "^6.4.10",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@privy-io/react-auth": "1.80.0",
     "@privy-io/server-auth": "1.11.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/mocha": "^10.0.7",
     "blockstore-core": "^5.0.0",
     "formidable": "^3.5.1",
     "formik": "^2.4.6",
@@ -35,11 +42,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remove": "^0.1.5",
+    "ts-jest": "^29.2.5",
     "viem": "^2.20.0",
     "wagmi": "^2.12.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@tsconfig/next": "^2.0.0",
     "@tsconfig/node18": "^18.2.0",
     "@tsconfig/strictest": "^2.0.1",
@@ -49,6 +60,8 @@
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.23.0",
     "eslint-config-next": "12.2.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "ts-node": "^10.9.1",
