--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 NEXT_PUBLIC_PRIVY_APP_ID=<your-privy-app-id>
 PRIVY_APP_SECRET=<your-privy-app-secret>
 
+NEXT_PUBLIC_PRIVY_APP_ID=
+PRIVY_APP_SECRET=
+PRIVATE_KEY=""
+
+
+#INFURA
+INFURA_PROJECT_ID=""
+INFURA_TOKEN=""
