--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "format": "npx prettier --write \"{__tests__,components,pages,styles}/**/*.{ts,tsx,js,jsx}\"",
     "lint": "next lint && npx prettier --check \"{__tests__,components,pages,styles}/**/*.{ts,tsx,js,jsx}\" && npx tsc --noEmit",
-    "test": "ts-jest"
+    "test": "jest"
   },
   "dependencies": {
     "@docuseal/react": "^1.0.43",
@@ -48,6 +48,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
