--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@types/mocha": "^10.0.7",
     "blockstore-core": "^5.0.0",
+    "ethers": "^5.7.2",
     "formidable": "^3.5.1",
     "formik": "^2.4.6",
     "helia": "^4.2.5",
